# MegaContext

./: .gitattributes  .gitignore  .mc_env  .pre-commit-config.yaml  AGENTS.md  CRIT.md  FUTURE_PLAN.md  PAPER_PLAN.md  POC_PLAN.md  README.md  REFACTOR_SUMMARY.md  SETUP.md  TODO.md  information_refactor_plan.md  mc_run.sh  mc_setup  on-track.md  package-lock.json  pyproject.toml  quartz.config.ts  run10.sh  run1000.sh  speedrun.sh  un-suck-tests.md
Research/: Gist Tokens - 2304.08467v3.md  LLMLingua-2 - 2403.12968v2.md  Perceiver - 2103.03206v2.md  RAG - 2005.11401v4.md
configs/: Gutenberg_SmolLM3.yaml  SampleText_TinyGPT2.yaml
docs/: gistnet.md  workflow_options.md
mc/: __init__.py  auto_batch.py  config.py  focus_allocator.py  gaussian_rope.py  gistnet.py  lensnet.py  mega_context.py  positional.py  runtime.py  sampling.py  telemetry.py  training_allocator.py  working_context.py
nanochat/: gpt.py
nanochat_cli/: __init__.py  __main__.py  app.py  checkpoints.py  config.py  messages.py  orchestrator.py  plugin.py  quit_screen.py
notebooks/: gistnet.ipynb  gistnet_demo.ipynb  megacontext.ipynb
obsidian/: Architecture Overview.md  Cognitive Core.md  Comparison - MegaContext vs RAG.md  Core Components.md  Focus Allocator.md  GistNet.md  Grand Vision.md  Home.md  Implementation Roadmap.md  LensNet.md  MOC - Core Components.md  MOC - Knowledge Workflow.md  MOC - MegaContext.md  MegaContext Canvas.canvas  MegaContext Canvas2.canvas  MegaContext Project.md  MegaContext.md  MegaPrediction.md  POC Architecture.md  POC Scope.md  Performance Sketch.md  README.md  TODO.md  (+7 more)
(+235 files in other folders)
